# pmm-kit

./: CLAUDE.md  MANIFEST.in  README.md  pyproject.toml
config/: notion.yaml  pmm.config.yaml
config/templates/: README_PROJECT.template.md  changelog.template.md  commdoc.template.md  gtm-plan.template.md  linked-projects.template.md  sales-enablement.template.md  sales-playbook.template.md  success-report.template.md
memory/: pmm.changelog.md  pmm.commdoc.md  pmm.execute.md  pmm.gtm.md  pmm.import.md  pmm.link.md  pmm.narrative.md  pmm.plan.md  pmm.propagate.md  pmm.research.md  pmm.sales-enablement.md  pmm.sales-playbook.md  pmm.scaffold.md  pmm.success-report.md  pmm.sync.md
pmm_kit/cli/: main.py
pmm_kit/core/: banner.py  config.py  files.py  logger.py  outputs.py  slugify.py  update.py
pmm_kit/data/config/templates/: narrative-README.template.md  narrative.template.md
pmm_kit/data/memory/: pmm.commdoc.md  pmm.constitution.md  pmm.gtm.md  pmm.import.md  pmm.narrative.md  pmm.publish.md  pmm.research.md  pmm.sales-enablement.md  pmm.scaffold.md  pmm.success-report.md  pmm.sync.md  pmm.tasks.md
